Remove KubernetesNamespace from Organization (#36)
