# server/internal/config/config.go
@@ -10,18 +10,14 @@ import (
 
 // DefaultOrganizationConfig is the default organization configuration.
 type DefaultOrganizationConfig struct {
-	Title               string   `yaml:"title"`
-	KubernetesNamespace string   `yaml:"kubernetesNamespace"`
-	UserIDs             []string `yaml:"userIds"`
+	Title   string   `yaml:"title"`
+	UserIDs []string `yaml:"userIds"`
 }
 
 // validate validates the configuration.
 func (c *DefaultOrganizationConfig) validate() error {
 	if c.Title == "" {
 		return fmt.Errorf("title must be set")
-	}
-	if c.KubernetesNamespace == "" {
-		return fmt.Errorf("kubernetes namespace must be set")
 	}
 	if len(c.UserIDs) == 0 {
 		return fmt.Errorf("userIds must be set")
